Memory Store issue fixed
